[BFN] KRAFUNC-81 updates.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6374 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/BFN/irb-protocolactions-BFN.html
+++ b/BFN/irb-protocolactions-BFN.html
@@ -126,6 +126,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
           <table width="100%" cellpadding="0"  cellspacing="0" class="tab" summary="">
             <tr>
               <td class="tabtable1-left"><img src="../images/tab-topleft.gif" alt="" width="12" height="29" align="absmiddle">Request an Action </td>
+              <td class="tabtable1-mid1">&nbsp;</td>
               <td class="tabtable1-mid"><span class="tabtable2-mid"><a href="#" id="A02" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 id="F02" ></a></span> </td>
               <td class="tabtable1-right"><img src="../images/tab-topright.gif" alt="" width="12" height="29" align="absmiddle"></td>
             </tr>
@@ -519,6 +520,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
           <table width="100%" cellpadding="0"  cellspacing="0" class="tab" summary="">
             <tr>
               <td class="tabtable1-left"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle" >Summary, History, & Print</td>
+              <td class="tabtable1-mid1">&nbsp;</td>
               <td class="tabtable2-mid"><a href="#" id="A03" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 id="F03" ></a> </td>
               <td class="tabtable2-right"><img src="../images/tab-topright1.gif" alt="" width="12" height="29" align="absmiddle"></td>
             </tr>
@@ -1062,7 +1064,6 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                             </td>
                             <td>
                                 Renewal Created
-
                             </td>
                             <td>
                                 07/11/2008
@@ -1488,6 +1489,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
             <!--<table width="100%" cellpadding="0"  cellspacing="0" class="tab" summary="">
                 <tr>
                     <td class="tabtable1-left"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle" />Action History</td>
+                    <td class="tabtable1-mid1">&nbsp;</td>
                     <td class="tabtable2-mid"><a href="#" id="A0311" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 id="F0311" /></a> </td>
                     <td class="tabtable2-right"><img src="../images/tab-topright1.gif" alt="" width="12" height="29" align="absmiddle" /></td>
                 </tr>
@@ -1498,6 +1500,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
           <table width="100%" cellpadding="0"  cellspacing="0" class="tab" summary="">
             <tr>
               <td class="tabtable1-left"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle">Ammendments & Renewals</td>
+              <td class="tabtable1-mid1">&nbsp;</td>
               <td class="tabtable2-mid"><a href="#" id="A10" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 id="F10" vspace=6></a> </td>
               <td class="tabtable2-right"><img src="../images/tab-topright1.gif" alt="" width="12" height="29" align="absmiddle"></td>
             </tr>
@@ -1554,6 +1557,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
           <table width="100%" cellpadding="0"  cellspacing="0" class="tab" summary="">
             <tr>
               <td class="tabtable1-left"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle" >Copy to New Document</td>
+              <td class="tabtable1-mid1">&nbsp;</td>
               <td class="tabtable2-mid"><a href="#" id="A364" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 id="F364" ></a> </td>
               <td class="tabtable2-right"><img src="../images/tab-topright1.gif" alt="" width="12" height="29" align="absmiddle"></td>
             </tr>
@@ -1569,6 +1573,11 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   <td>yes </td>
                 </tr>
                 <tr>
+                  <th><div align="right">Attachments?</div></th>
+                  <td><input name="checkbox" type="checkbox" class="nobord" id="checkbox">
+                  </td>
+                </tr>
+                <tr>
                   <td colspan="2" class="infoline"><div align="center"><img src="../images/tinybutton-copyprotocol.gif" width="80" height="15" alt="copy protocol"></div></td>
                 </tr>
               </tbody>
@@ -1578,6 +1587,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
           <table width="100%" cellpadding="0"  cellspacing="0" class="tab" summary="">
             <tr>
               <td class="tabtable1-left"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle">Ad Hoc Recipients</td>
+              <td class="tabtable1-mid1">&nbsp;</td>
               <td class="tabtable2-mid"><a href="#" id="A365" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 id="F365" vspace=6></a> </td>
               <td class="tabtable2-right"><img src="../images/tab-topright1.gif" alt="" width="12" height="29" align="absmiddle"></td>
             </tr>
@@ -1746,6 +1756,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
           <table width="100%" cellpadding="0"  cellspacing="0" class="tab" summary="">
             <tr>
               <td class="tabtable1-left"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle">Route Log </td>
+              <td class="tabtable1-mid1">&nbsp;</td>
               <td class="tabtable2-mid"><a href="#" id="A734" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 id="F734" vspace=6></a> </td>
               <td class="tabtable2-right"><img src="../images/tab-topright1.gif" alt="" width="12" height="29" align="absmiddle"></td>
             </tr>
