--- a/BFN/kauli-snippets.html
+++ b/BFN/kauli-snippets.html
@@ -179,6 +179,18 @@ Page
     </tr>
 </table>
 
+<!-- Expanded Read Only text area -->
+<table style="border:none; width:100%;" cellpadding="0" cellspacing="0">
+    <tr>
+        <td style="border:none;">
+            x
+        </td>
+        <td style="border:none; width:20px; vertical-align:bottom;">
+            <input name="x" src="../images/openreadonly_greenarrow01.jpg" onclick="javascript: alert('If this were not a mock, this icon would open a read only view of the full text.'); return false" class="tinybutton" alt="Expanded Read Only Text Area" type="image" />
+        </td>
+    </tr>
+</table>
+
 <!-- Help -->
 <a href="#" target="helpWindow" title="help"><img src="../images/my_cp_inf.gif" alt="help" align="middle" border="0" /></a>
 
