--- a/kra-awa-dev/aw-time-money.html
+++ b/kra-awa-dev/aw-time-money.html
@@ -491,7 +491,7 @@
                         <td style="background-image:url(../images/th-back.gif);" colspan="3">
                             <div>
                                 <span style="float:right; margin-right:17px;">
-                                    <table style="border-collapse:collapse; border:1px solid #999999;">
+                                    <table style="width:600px; border-collapse:collapse; border:1px solid #999999;">
                                         <tr>
                                             <td style="text-align:center; font-weight:bold; background-image:url(../images/th-back.gif); width:120px; border-collapse:collapse; border:1px solid #999999;">
                                                 Obligated
@@ -524,7 +524,7 @@
                                    <ul>
                                         <li>
                                             <span style="float:right;">
-                                                <table style="border-collapse:collapse; border:1px solid #999999;">
+                                                <table style="width:600px; border-collapse:collapse; border:1px solid #999999;">
                                                     <tr>
                                                         <td style="text-align:right; width:120px; border-collapse:collapse; border:1px solid #999999;">
                                                             20,000.00
@@ -550,7 +550,7 @@
                                             <ul>
                                                 <li>
                                                     <span style="float:right;">
-                                                        <table style="border-collapse:collapse; border:1px solid #999999;">
+                                                        <table style="width:600px; border-collapse:collapse; border:1px solid #999999;">
                                                             <tr>
                                                                 <td style="text-align:right; width:120px; border-collapse:collapse; border:1px solid #999999;">
                                                                     20,000.00
@@ -577,7 +577,7 @@
                                                 </li>
                                                 <li>
                                                     <span style="float:right;">
-                                                        <table style="border-collapse:collapse; border:1px solid #999999;">
+                                                        <table style="width:600px; border-collapse:collapse; border:1px solid #999999;">
                                                             <tr>
                                                                 <td style="text-align:right; width:120px; border-collapse:collapse; border:1px solid #999999;">
                                                                     20,000.00
@@ -603,7 +603,7 @@
                                                     <ul>
                                                         <li>
                                                             <span style="float:right;">
-                                                                <table style="border-collapse:collapse; border:1px solid #999999;">
+                                                                <table style="width:600px; border-collapse:collapse; border:1px solid #999999;">
                                                                     <tr>
                                                                         <td style="text-align:right; width:120px; border-collapse:collapse; border:1px solid #999999;">
                                                                             20,000.00
@@ -628,7 +628,7 @@
                                                         </li>
                                                         <li>
                                                             <span style="float:right;">
-                                                                <table style="border-collapse:collapse; border:1px solid #999999;">
+                                                                <table style="width:600px; border-collapse:collapse; border:1px solid #999999;">
                                                                     <tr>
                                                                         <td style="text-align:right; width:120px; border-collapse:collapse; border:1px solid #999999;">
                                                                             20,000.00
@@ -653,7 +653,7 @@
                                                         </li>
                                                         <li>
                                                             <span style="float:right;">
-                                                                <table style="border-collapse:collapse; border:1px solid #999999;">
+                                                                <table style="width:600px; border-collapse:collapse; border:1px solid #999999;">
                                                                     <tr>
                                                                         <td style="text-align:right; width:120px; border-collapse:collapse; border:1px solid #999999;">
                                                                             20,000.00
@@ -678,7 +678,7 @@
                                                         </li>
                                                         <li>
                                                             <span style="float:right;">
-                                                                <table style="border-collapse:collapse; border:1px solid #999999;">
+                                                                <table style="width:600px; border-collapse:collapse; border:1px solid #999999;">
                                                                     <tr>
                                                                         <td style="text-align:right; width:120px; border-collapse:collapse; border:1px solid #999999;">
                                                                             20,000.00
@@ -703,7 +703,7 @@
                                                         </li>
                                                         <li>
                                                             <span style="float:right;">
-                                                                <table style="border-collapse:collapse; border:1px solid #999999;">
+                                                                <table style="width:600px; border-collapse:collapse; border:1px solid #999999;">
                                                                     <tr>
                                                                         <td style="text-align:right; width:120px; border-collapse:collapse; border:1px solid #999999;">
                                                                             20,000.00
@@ -728,7 +728,7 @@
                                                         </li>
                                                         <li>
                                                             <span style="float:right;">
-                                                                <table style="border-collapse:collapse; border:1px solid #999999;">
+                                                                <table style="width:600px; border-collapse:collapse; border:1px solid #999999;">
                                                                     <tr>
                                                                         <td style="text-align:right; width:120px; border-collapse:collapse; border:1px solid #999999;">
                                                                             20,000.00
@@ -753,7 +753,7 @@
                                                         </li>
                                                         <li>
                                                             <span style="float:right;">
-                                                                <table style="border-collapse:collapse; border:1px solid #999999;">
+                                                                <table style="width:600px; border-collapse:collapse; border:1px solid #999999;">
                                                                     <tr>
                                                                         <td style="text-align:right; width:120px; border-collapse:collapse; border:1px solid #999999;">
                                                                             20,000.00
@@ -778,7 +778,7 @@
                                                         </li>
                                                         <li>
                                                             <span style="float:right;">
-                                                                <table style="border-collapse:collapse; border:1px solid #999999;">
+                                                                <table style="width:600px; border-collapse:collapse; border:1px solid #999999;">
                                                                     <tr>
                                                                         <td style="text-align:right; width:120px; border-collapse:collapse; border:1px solid #999999;">
                                                                             20,000.00
@@ -803,7 +803,7 @@
                                                         </li>
                                                         <li>
                                                             <span style="float:right;">
-                                                                <table style="border-collapse:collapse; border:1px solid #999999;">
+                                                                <table style="width:600px; border-collapse:collapse; border:1px solid #999999;">
                                                                     <tr>
                                                                         <td style="text-align:right; width:120px; border-collapse:collapse; border:1px solid #999999;">
                                                                             20,000.00
@@ -828,7 +828,7 @@
                                                         </li>
                                                         <li>
                                                             <span style="float:right;">
-                                                                <table style="border-collapse:collapse; border:1px solid #999999;">
+                                                                <table style="width:600px; border-collapse:collapse; border:1px solid #999999;">
                                                                     <tr>
                                                                         <td style="text-align:right; width:120px; border-collapse:collapse; border:1px solid #999999;">
                                                                             20,000.00
