[BFN] KRAFUNC-113 updates.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6381 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/BFN/kauli-snippets.html
+++ b/BFN/kauli-snippets.html
@@ -227,5 +227,8 @@ Page
     <option value="2">Lorem</option>
     <option value="3">Ulset</option>
 </select>
+
+<!-- Refresh -->
+<input name="refresh0" src="../images/arrow_refresh.png" class="tinybutton" alt="Refresh Pulldown Options" title="Refresh Pulldown Options" type="image" />
                     
                     
