[BFN] KRAFUNC-90 updates.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6382 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/BFN/kauli-snippets.html
+++ b/BFN/kauli-snippets.html
@@ -186,7 +186,7 @@ Page
             x
         </td>
         <td style="border:none; width:20px; vertical-align:bottom;">
-            <input name="x" src="../images/openreadonly_greenarrow01.jpg" onclick="javascript: alert('If this were not a mock, this icon would open a read only view of the full text.'); return false" class="tinybutton" alt="Expanded Read Only Text Area" type="image" />
+            <input name="x" src="../images/openreadonly_greenarrow01.png" onclick="javascript: alert('If this were not a mock, this icon would open a read only view of the full text.'); return false" class="tinybutton" alt="Expanded Read Only Text Area" type="image" />
         </td>
     </tr>
 </table>
