[BFN] KRAFUNC-22 updates.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6383 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-awa-dev/aw-payments-reports-terms.html
+++ b/kra-awa-dev/aw-payments-reports-terms.html
@@ -4390,8 +4390,9 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   <td><div align="center"><a href="#"><img src="../images/tinybutton-delete1.gif" alt="add" width=40 height=15 hspace=3 vspace=3 border=0></a></div></td>
                 </tr>
             </table>
-            <br>
-            <br>
+            <p>
+            	<input name="x" src="../images/tinybutton-synctotemplate.gif" onclick="javascript: alert('If this were not a mock, this button would sync to the template.'); return false" class="tinybutton" alt="sync" title="Sync to Template" type="image" />
+            </p>
           </div>
           
           <!-- Special Approval -->
