[BFN] KRAFUNC-21 updates.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6387 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-awa-dev/aw-time-money.html
+++ b/kra-awa-dev/aw-time-money.html
@@ -1307,9 +1307,9 @@
                         <th>*Fiscal Year</th>
                         <th>Source</th>
                         <th>Destination</th>
+                        <th>Verification Date</th>
                         <th>*Commitment Amount</th>
                         <th>Cost Share Met</th>
-                        <th>Verification Date</th>
                         <th>Actions</th>
                     </tr>
                     <tr>
@@ -1345,18 +1345,19 @@
                             </div>
                         </td>
                         <td class="infoline">
-                            <div align="right">
-                            <input name="textfield" type="text" id="textfield" size="12">
-                            </div>
-                        </td>
-                        <td class="infoline">
-                            <div align="right">
-                            <input name="textfield" type="text" id="textfield" size="12">
-                            </div>
-                        </td>
-                        <td class="infoline">
                         	<input name="date1a" type="text" size="10">
                             <a href="#"><img src="../images/cal.gif" alt="select date" width="16" height="16" align="absmiddle" /></a>
+                        </td>
+                        <td class="infoline">
+                            <div align="right">
+                            <input name="textfield" type="text" id="textfield" size="12">
+                            </div>
+                        </td>
+                        <td class="infoline">
+                            <div align="right">
+                            <input name="textfield" type="text" id="textfield" size="12">
+                            </div>
+                        </td>
                         <td nowrap class="infoline">
                             <div align="center">
                             <a href="#"><img src="../images/tinybutton-add1.gif" alt="Add" width=40 height=15 hspace=3 vspace=3 border=0></a>
@@ -1396,14 +1397,14 @@
                             </div>
                         </td>
                         <td>
+                        	<input name="date1b" type="text" value="12/14/2009" size="10">
+                            <a href="#"><img src="../images/cal.gif" alt="select date" width="16" height="16" align="absmiddle" /></a>
+                        </td>
+                        <td>
                             <div align="right"><input name="textfield" type="text" size="12" value="1.50" style="text-align:right;" /></div>
                         </td>
                         <td>
                             <div align="right"><input name="textfield" type="text" size="12" value="4.70" style="text-align:right;" /></div>
-                        </td>
-                        <td>
-                        	<input name="date1b" type="text" value="12/14/2009" size="10">
-                            <a href="#"><img src="../images/cal.gif" alt="select date" width="16" height="16" align="absmiddle" /></a>
                         </td>
                         <td nowrap>
                             <div align="center">
@@ -1444,26 +1445,24 @@
                             </div>
                         </td>
                         <td>
+                        	<input name="date1c" type="text" value="12/14/2009" size="10">
+                            <a href="#"><img src="../images/cal.gif" alt="select date" width="16" height="16" align="absmiddle" /></a>
+                        </td>
+                        <td>
                             <div align="right"><input name="textfield" type="text" size="12" value="3.25" style="text-align:right;" /></div>
                         </td>
                         <td>
                             <div align="right"><input name="textfield" type="text" size="12" value="6.30" style="text-align:right;" /></div>
-                        </td>
-                        <td>
-                        	<input name="date1c" type="text" value="12/14/2009" size="10">
-                            <a href="#"><img src="../images/cal.gif" alt="select date" width="16" height="16" align="absmiddle" /></a>
                         </td>
                         <td nowrap>
                             <div align="center"><a href="#"><img src="../images/tinybutton-delete1.gif" alt="delete" width=40 height=15 hspace=3 vspace=3 border=0></a></div>
                         </td>
                     </tr>
                     <tr>
-                        <th width="6%"  scope="row">Total:</th>
-                        <td colspan="5" class="infoline">&nbsp;</td>
+                        <td class="infoline" colspan="7" style="text-align:right;"><b>Total:</b></td>
                         <td class="infoline"><div align="right"><strong>$4.75</strong></div></td>
                         <td class="infoline"><div align="right"><strong>$11.00</strong></div></td>
                         <td class="infoline">&nbsp;</td>
-                        <td class="infoline"><div align="center"></div></td>
                     </tr>
                 </table>
         <!-- Element Content: Comments -->
