[BFN] KRAFUNC-15 updates.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6389 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-awa-dev/aw-awards.html
+++ b/kra-awa-dev/aw-awards.html
@@ -807,13 +807,13 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
             <table align="center" cellpAdding="0" cellspacing="0"  summary=""  >
               <tr>
                 <th>&nbsp;</th>
-                <th width="25%" scope=col>Organization Name</th>
-                <th width="23%" scope=col>Subaward ID</th>
-                <th width="24%" scope=col>Amount</th>
-                <th width="22%" scope=col>Status</th>
+                <th>Organization Name</th>
+                <th>Subaward ID</th>
+                <th>Amount</th>
+                <th>Status</th>
               </tr>
               <tr>
-                <th width="6%"  scope="row">1</th>
+                <th style="width:45px;">1</th>
                 <td><div align=left> University of Arizona Steward Observatory
                     <input name="image5" type="image" class="nobord" src="../images/book_open.png" alt="inquiry">
                   </div></td>
@@ -822,7 +822,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                 <td><div align="center">Active</div></td>
               </tr>
               <tr>
-                <th width="6%"  scope="row">2</th>
+                <th>2</th>
                 <td><div align=left> California University of Crocker Nuclear Lab
                     <input name="image6" type="image" class="nobord" src="../images/book_open.png" alt="inquiry">
                   </div></td>
@@ -831,7 +831,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                 <td><div align="center">Archive</div></td>
               </tr>
               <tr>
-                <th width="6%"  scope="row">Total:</th>
+                <th>Total:</th>
                 <td colspan="2" class="infoline"><div align="right">&nbsp;</div></td>
                 <td class="infoline"><div align="right"><strong>$61,486.00</strong></div></td>
                 <td class="infoline">&nbsp;</td>
