--- a/kra-awa-dev/aw-notes.html
+++ b/kra-awa-dev/aw-notes.html
@@ -370,15 +370,27 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                 <td class="infoline">&nbsp;</td>
                 <td class="infoline">&nbsp;</td>
                 <td class="infoline"><input name="org_doc_nbr22" size=25 type=text alt="Description" id="note topic"></td>
-                <td height="30" nowrap class="infoline"><textarea name="prsn_base_slry" cols="30" rows="3"></textarea>
-                  <a href="#"><input type="image" class="nobord" onClick="MM_openBrWindow('../global/expandedtext.html','','width=700,height=300')" src="../images/pencil_add.png" alt="expand textarea"></a></td>
+                <td height="30" nowrap class="infoline">
+                
+                    <table style="border:none; width:100%;" cellpadding="0" cellspacing="0">
+                        <tr>
+                            <td style="border:none;">
+                                <textarea name="z" style="width:100%; text-align:left;" rows="3"></textarea>
+                            </td>
+                            <td style="border:none; width:20px; vertical-align:bottom;">
+                                <input name="x" src="../images/pencil_add.png" onclick="javascript: alert('pop-up here'); return false" class="tinybutton" alt="Expanded Text Area" type="image" />
+                            </td>
+                        </tr>
+                    </table>
+                
+                </td>
                 <td class="infoline"><div align=center>
                     <input name="imageField2" type=image class="tinybutton" src="../images/tinybutton-add1.gif" alt="Add">
                   </div></td>
               </tr>
               <tr>
                 <th scope=row>1</th>
-                <td>2007-07-23 20:07:23.523</td>
+                <td>07/23/2007 20:07:23.523</td>
                 <td>thrclark</td>
                 <td>testing</td>
                 <td height="30">ma iustum et integrum? quo enim fugerunt, cum fugerent a facie tua? aut ubi tu non invenis eos? sed fugerunt, ut non viderent te videntem se, atque excaecati in te offenderent -- quia non deseris aliquid eorum, quae fecisti -- in te offenderent iniusti et iuste vexarentur, subtrahentes se lenitati tuae, et offendentes in rectitudinem tuam, et cadentes in asperitatem tuam. videlicet nesciunt, quod ubique sis, quem nullus circuminscribit locus, et solus es praesens etiam his, qui longe fiunt a te. convertantur ergo et quaerant te, quia non, sicut ipsi deseruerunt creatorem suum, ita tu deseruisti creaturam tuam. ipsi conve</td>
@@ -386,7 +398,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
               </tr>
               <tr>
                 <th scope=row>2</th>
-                <td>2007-07-24 21:07:56.516</td>
+                <td>07/24/2007 21:07:56.516</td>
                 <td>thrclark</td>
                 <td>testing 2</td>
                 <td height="30">ntum potuerunt valere, ut possent aestimare saeculum, quamquam eius dominum minime invenerint. quoniam magnus es, domine, et humilia respicis, excelsa autem a longe agnoscis: nec propinquas nisi obtritis corde, nec inveneris a superbis, nec si illi curiosa peritia numerent stellas et harenam, et dimetiantur sidereas plagas, et vestigent vias astrorum. mente sua enim quaerunt ista et ingenio, quod tu de</td>
