[BFN] KRAFUNC-115 updates.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6402 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-com-dev/irb-schedule.html
+++ b/kra-com-dev/irb-schedule.html
@@ -364,11 +364,11 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                                 <td valign="middle" class="nobord" style="background-color:none">
                                 	<div align="right"><strong>View Date Range:&nbsp;&nbsp;</strong></div>
                                 </td>
-                                <td valign="bottom" class="nobord" style="background-color:none">Before<br>
+                                <td valign="bottom" class="nobord" style="background-color:none">From<br>
                                     <input name="startDate3" type=text onchange="dataChanged()" size=12 />
                                     <a href="#" onClick="cal.select(document.forms['example'].date1,'anchor1','MM/dd/yyyy'); return false;" name="anchor1" id="anchor9"><img src="../images/cal.gif" alt="select date" width=16 height=16 align=absmiddle></a>
                                 </td>
-                                <td valign="bottom" class="nobord" style="background-color:none">After</span><br>
+                                <td valign="bottom" class="nobord" style="background-color:none">To</span><br>
                                     <input name="startDate3" type=text onchange="dataChanged()" size=12 />
                                     <a href="#" onClick="cal.select(document.forms['example'].date1,'anchor1','MM/dd/yyyy'); return false;" name="anchor1" id="anchor7"><img src="../images/cal.gif" alt="select date" width=16 height=16 align=absmiddle></a>
                                 </td>
