[BFN] KRAFUNC-57 updates.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6404 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-awa-dev/aw-awards.html
+++ b/kra-awa-dev/aw-awards.html
@@ -550,9 +550,10 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                             </div>
                         </th>
                         <td>
-                            <input name="sid" type=text onchange="dataChanged()" value="123456 : National Cancer Institute" size="30" id="sid"/>
+                            <input name="sid" type=text onchange="dataChanged()" value="123456" size="10" id="sid"/>
                             <input name="image2" type="image" class="nobord" src="../images/searchicon.gif" alt="lookup">
                             <input name="image2" type="image" class="nobord" src="../images/book_open.png" alt="inquiry">
+                            <span class="fineprint"><br />National Cancer Institute</span>
                         </td>
                         <th>
                             <div align=right>
@@ -560,9 +561,10 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                             </div>
                         </th>
                         <td>
-                            <input name="psid" type=text onchange="dataChanged()" value="000340 : National Institutes of Health" size=40 id="psid"/>
+                            <input name="psid" type=text onchange="dataChanged()" value="000340" size="10" id="psid"/>
                             <input name="image23" type="image" class="nobord" src="../images/searchicon.gif" alt="lookup">
                             <input name="image23" type="image" class="nobord" src="../images/book_open.png" alt="inquiry">
+                            <span class="fineprint"><br />National Institutes of Health</span>
                         </td>
                     </tr>
                     <tr>
